--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -772,7 +772,7 @@ jobs:
         run: npm run build
 
       - name: Run Integration tests
-        run: npm run integ-test  -- -t 'quote for other networks * astrochain'
+        run: npm run integ-test  -- -t 'quote for other networks * worldchain'
         env:
           JSON_RPC_PROVIDER_WORLDCHAIN: ${{ secrets.JSON_RPC_PROVIDER_WORLDCHAIN }}
           TENDERLY_BASE_URL: ${{ secrets.TENDERLY_BASE_URL }}
@@ -781,7 +781,7 @@ jobs:
           TENDERLY_ACCESS_KEY: ${{ secrets.TENDERLY_ACCESS_KEY }}
 
       - name: Run Integration tests
-        run: npm run integ-test  -- -t 'quote for other networks * astrochain-sepolia'
+        run: npm run integ-test  -- -t 'quote for other networks * astrochain'
         env:
           JSON_RPC_PROVIDER_ASTROCHAIN_SEPOLIA: ${{ secrets.JSON_RPC_PROVIDER_ASTROCHAIN_SEPOLIA }}
           TENDERLY_BASE_URL: ${{ secrets.TENDERLY_BASE_URL }}
