--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@cacheable/node-cache": "^1.4.0",
     "@eth-optimism/sdk": "^3.2.2",
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
@@ -57,7 +58,6 @@
     "graphql-request": "^3.4.0",
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
-    "node-cache": "^5.1.2",
     "stats-lite": "^2.2.0"
   },
   "devDependencies": {
