--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
+    // TODO update ur-sdk once https://github.com/Uniswap/sdks/pull/172 is merged and published
     "@uniswap/universal-router-sdk": "^4.4.2",
     "@uniswap/v2-sdk": "^4.6.1",
     "@uniswap/v3-sdk": "^3.17.1",
