--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.3.0",
-    "@uniswap/router-sdk": "^1.14.0",
-    "@uniswap/sdk-core": "^5.9.0",
+    "@uniswap/router-sdk": "^1.15.0",
+    "@uniswap/sdk-core": "^6.0.0",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "^4.6.1",
-    "@uniswap/v2-sdk": "^4.6.1",
-    "@uniswap/v3-sdk": "^3.17.1",
-    "@uniswap/v4-sdk": "^1.10.0",
+    "@uniswap/universal-router-sdk": "file:/tmp/ur-sdk-001.tgz",
+    "@uniswap/v2-sdk": "^4.7.0",
+    "@uniswap/v3-sdk": "^3.19.0",
+    "@uniswap/v4-sdk": "^1.12.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
