--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "4.7.0",
+    "@uniswap/universal-router-sdk": "^4.7.0",
     "@uniswap/v2-sdk": "^4.7.0",
     "@uniswap/v3-sdk": "^3.19.0",
     "@uniswap/v4-sdk": "^1.12.0",
