--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
           # Defaults to the user or organization that owns the workflow file
-          scope: '@0xthoth'
+          scope: '@kittycorn-labs'
 
       - name: Setup CI
         run: npm ci
