--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepare-release": "run-s cov:check doc:html version doc:publish",
     "test": "jest test/unit",
     "integ-test": "TS_NODE=true jest test/integ --testRunner='jest-circus/runner'",
-    "prepare": "husky"
+    "prepare": "husky",
+    "npm:publish": "npm publish --access public"
   },
   "engines": {
     "node": ">=10"
@@ -37,15 +38,15 @@
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.3.0",
-    "@uniswap/router-sdk": "^1.21.0",
-    "@uniswap/sdk-core": "^7.5.0",
+    "@uniswap/router-sdk": "^1.18.0",
+    "@uniswap/sdk-core": "^7.1.0",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "^4.14.0",
-    "@uniswap/v2-sdk": "^4.13.0",
-    "@uniswap/v3-sdk": "^3.24.0",
-    "@uniswap/v4-sdk": "^1.18.0",
+    "@uniswap/universal-router-sdk": "^4.10.0",
+    "@uniswap/v2-sdk": "^4.9.0",
+    "@uniswap/v3-sdk": "^3.21.0",
+    "@uniswap/v4-sdk": "^1.15.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
