--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kittycorn-labs/smart-order-router",
-  "version": "4.20.4-1",
+  "version": "4.20.4-2",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -39,7 +39,7 @@
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.3.0",
-    "@uniswap/router-sdk": "^1.18.0",
+    "@kittycorn-labs/router-sdk": "^1.2.0",
     "@kittycorn-labs/sdk-core": "^1.0.0",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
@@ -47,7 +47,7 @@
     "@uniswap/universal-router-sdk": "^4.10.0",
     "@uniswap/v2-sdk": "^4.9.0",
     "@uniswap/v3-sdk": "^3.21.0",
-    "@uniswap/v4-sdk": "^1.15.0",
+    "@kittycorn-labs/v4-sdk": "^1.1.2",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
