--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kittycorn-labs/smart-order-router",
-  "version": "4.20.4-3",
+  "version": "4.20.4-4",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -40,14 +40,14 @@
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@kittycorn-labs/sdk-core": "^1.0.0",
-    "@kittycorn-labs/router-sdk": "^1.2.1",
+    "@kittycorn-labs/v2-sdk": "^1.0.0",
+    "@kittycorn-labs/v3-sdk": "^1.0.0",
     "@kittycorn-labs/v4-sdk": "^1.1.2",
+    "@kittycorn-labs/router-sdk": "^1.2.1",
+    "@kittycorn-labs/universal-router-sdk": "^1.4.2",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "^4.10.0",
-    "@uniswap/v2-sdk": "^4.9.0",
-    "@uniswap/v3-sdk": "^3.21.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
