--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kittycorn-labs/smart-order-router",
-  "version": "4.20.4-5",
+  "version": "4.20.4-6",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -12,7 +12,7 @@
   "license": "GPL",
   "keywords": [],
   "scripts": {
-    "compile-v4-types": "npx typechain --target ethers-v5 --out-dir src/types/v4 './node_modules/@uniswap/?(v4-core|v4-periphery)/artifacts/contracts/**/*.json'",
+    "compile-v4-types": "npx typechain --target ethers-v5 --out-dir src/types/v4 './node_modules/@kittycorn-labs/?(v4-core|v4-periphery)/artifacts/contracts/**/*.json'",
     "compile-v3-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
     "compile-v2-types": "npx typechain --target ethers-v5 --out-dir src/types/v2 './node_modules/@uniswap/?(v2-core|v2-periphery)/build/*UniswapV2*.json'",
     "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/swap-router-contracts/artifacts/contracts/**/*.json'",
@@ -36,15 +36,15 @@
   },
   "dependencies": {
     "@eth-optimism/sdk": "^3.2.2",
+    "@kittycorn-labs/router-sdk": "^1.2.4",
+    "@kittycorn-labs/sdk-core": "^1.0.0",
+    "@kittycorn-labs/universal-router-sdk": "^1.4.5",
+    "@kittycorn-labs/v2-sdk": "^1.0.1",
+    "@kittycorn-labs/v3-sdk": "^1.0.1",
+    "@kittycorn-labs/v4-sdk": "^1.1.4",
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.3.0",
-    "@kittycorn-labs/sdk-core": "^1.0.0",
-    "@kittycorn-labs/v2-sdk": "^1.0.1",
-    "@kittycorn-labs/v3-sdk": "^1.0.1",
-    "@kittycorn-labs/v4-sdk": "^1.1.2",
-    "@kittycorn-labs/router-sdk": "^1.2.1",
-    "@kittycorn-labs/universal-router-sdk": "^1.4.2",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
@@ -52,6 +52,7 @@
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
     "brotli": "^1.3.3",
+    "build": "^0.1.4",
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
     "ethers": "^5.7.2",
